--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -1,31 +1,31 @@
-.bg_about {
-    background-color: aqua;
-}
-
-.bg_products {
-    background-color: red;
-}
-
-.bg_courses {
-    background-color: greenyellow;
-}
-
-.bg_contact {
-    background-color: yellow;
-}
-
-section {
+.home, .about, .products, .courses, .contact {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
 }
 
-section h1 {
+.about {
+    background-color: aqua;
+}
+
+.products {
+    background-color: red;
+}
+
+.courses {
+    background-color: greenyellow;
+}
+
+.contact {
+    background-color: yellow;
+}
+
+.big_title {
     font-size: 100px;
 }
 
-section button {
+.page_button {
     width: 150px;
     height: 50px;
     background-color: black;
