[UPDATE] Responsiveness in mobile view

--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -36,3 +36,14 @@
     font-weight: 600;
     cursor: pointer;
 }
+
+@media (max-width: 767px) {
+    .big_title {
+        font-size: 40px;
+    }
+
+    .page_button {
+        width: 100px;
+        font-size: 12px;
+    }
+}
