--- a/src/styles/Navbar.module.css
+++ b/src/styles/Navbar.module.css
@@ -13,18 +13,25 @@
 
 .logo {
     width: 140px;
-    margin-left: 40px;
+    padding-left: 40px;
+}
+
+.hamburger {
+    display: none;
 }
 
 .navbar ul {
     list-style-type: none;
-    padding-left: 0;
     text-decoration: none;
 }
 
 .navbar li {
-    margin-right: 30px;
+    padding: 30px;
     font-size: 20px;
+}
+
+.button_mobile {
+    display: none;
 }
 
 .links {
@@ -59,6 +66,11 @@
     width: 100%;
 }
 
+.nav_buttons {
+    padding-right: 40px;
+    display: flex;
+}
+
 .nav_buttons button{
     position: relative;
     overflow: hidden;
@@ -90,4 +102,69 @@
 
 .nav_buttons button:hover::before {
     left: 0;
+}
+
+@media (max-width: 767px) {
+    .navbar {
+        height: 100px;
+    }
+
+    .navbar li {
+        padding: 15px;
+    }
+
+    .logo {
+        width: 100px;
+        padding-left: 20px;
+    }    
+    
+    .hamburger {
+        display: block;
+        margin-right: 20px;
+        font-size: 20px;
+        font-weight: bold;
+        border: solid 2px;
+        border-radius: 5px;
+        padding: 3px;
+    }
+
+    .links {
+        display: none;
+        position: absolute;
+        flex-direction: column;
+        top: 100px;
+        left: 0;
+        background: beige;
+        width: 100%;
+        padding: 0;
+        border-top: 1px solid black;
+        margin: 0;
+        box-sizing: border-box;
+    }
+
+    .links.menu_open, .button_mobile {
+        display: flex;
+    }
+
+    .button_mobile {
+        justify-content: center;
+        align-items: center;
+        width: 150px;
+        height: 30px;
+        background-color: orangered;
+        color: white;
+        border-radius: 10px;
+        border: none;
+        font-weight: bold;
+        font-family: 'Times New Roman', Times, serif;
+        font-size: 16px;
+    }
+
+    .links {
+        flex-direction: column;
+    }
+
+    .nav_buttons {
+        display: none;
+    }
 }
