--- a/src/styles/Navbar.module.css
+++ b/src/styles/Navbar.module.css
@@ -1,11 +1,10 @@
 .navbar{
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
     padding: 10px;
     box-sizing: border-box;
-    background-color: beige;
-    height: 120px;
+    height: 80px;
     width: 100%;
     position: fixed;
     top: 0;
@@ -16,22 +15,16 @@
 }
 
 .logo {
-    width: 140px;
-    padding-left: 40px;
+    text-decoration: none;
+    color: rgb(99, 61, 160);
+    font-size: 24px;
+    font-family: "Shrikhand", serif;
+    font-weight: 400;
+    font-style: normal;
 }
 
 .hamburger {
     display: none;
-}
-
-.navbar ul {
-    list-style-type: none;
-    text-decoration: none;
-}
-
-.navbar li {
-    padding: 30px;
-    font-size: 20px;
 }
 
 .button_mobile {
@@ -42,61 +35,66 @@
     display: flex;
     justify-content: center;
     align-items: center;
-}
-
-.links a {    
+    list-style-type: none;
     text-decoration: none;
-    color: black;
-    position: relative;
-    display: inline-block;
+    border: 2px solid rgb(99, 61, 160);
+    border-radius: 30px;
+    max-height: 50px;
+    padding-inline-start: 0;
 }
 
 .links.dark a {
     color: white;
 }
 
-.links a:hover {
-    font-weight: bold;
+.links li {
+    padding: 30px;
 }
 
-.links.dark a:hover {
-    font-weight: bold;
+.page_link {
+    font-size: 17px;
+    color: rgb(99, 61, 160);
+    text-decoration: none;
+    position: relative;
+    display: inline-block;
+    padding-bottom: 2px;
 }
 
-.animated_link::after {
+.page_link::after {
     content: "";
     position: absolute;
     width: 0%;
     height: 2px;
     left: 0;
     bottom: 0;
-    background-color: black;
+    background-color: rgb(99, 61, 160);
     transition: width 0.3s ease-in-out;
 }
 
-.animated_link.dark::after {
+.page_link.dark::after {
     background-color: white;
 }
   
-.animated_link:hover::after {
+.page_link:hover::after {
     width: 100%;
 }
 
-.nav_buttons {
-    padding-right: 40px;
+.buttons_lang {
     display: flex;
+    gap: 10px;
 }
 
-.nav_buttons button{
+.buttons_lang button{
+    display: flex;
+    align-items: center;
     position: relative;
     overflow: hidden;
-    margin-left: 20px;
-    width: 120px;
-    height: 40px;
-    background-color: orangered;
-    color: white;
+    width: 65px;
+    height: 35px;
+    color: rgb(99, 61, 160);
+    background-color: white;
     border-radius: 10px;
-    border: none;
+    border: 2px solid rgb(99, 61, 160);
     font-weight: bold;
     font-family: 'Times New Roman', Times, serif;
     font-size: 16px;
