--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -1,36 +1,34 @@
-.home, .about, .products, .courses, .contact {
+.home {
     display: flex;
-    flex-direction: column;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
 }
 
-.about {
-    background-color: aqua;
+.headline {
+    font-family: "Exo 2", sans-serif;
+    font-optical-sizing: auto;
+    font-style: italic;
 }
 
-.about.dark {
-    background-color: darkcyan;
+.entry_line {
+    color: #fff;
+    margin: 0;
+    font-size: 28px;
 }
 
-.products {
-    background-color: red;
+.title {
+    font-size: 70px;
+    background: linear-gradient(90deg, #7b5cf0, #9a7fff, #b8c0ff);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    background-clip: text;
+    color: transparent;
+    margin: 20px 0px;
 }
 
-.products.dark {
-    background-color: darkgoldenrod;
-}
-
-.courses {
-    background-color: greenyellow;
-}
-
-.courses.dark {
-    background-color: darkgreen;
-}
-
-.contact {
-    background-color: yellow;
+.description {
+    color: #fff;
+    font-size: 20px;
 }
 
 .contact.dark {
