--- a/src/styles/Navbar.module.css
+++ b/src/styles/Navbar.module.css
@@ -11,10 +11,6 @@
     margin-top: 15px;
 }
 
-.navbar.dark {
-    background-color: darkred;
-}
-
 .logo {
     text-decoration: none;
     font-size: 32px;
@@ -48,10 +44,6 @@
     padding-inline-start: 0;
 }
 
-.links.dark a {
-    color: white;
-}
-
 .links li {
     padding: 30px;
 }
@@ -62,7 +54,6 @@
     text-decoration: none;
     position: relative;
     display: inline-block;
-    padding-bottom: 2px;
     font-weight: bold;
 }
 
@@ -70,9 +61,9 @@
     content: "";
     position: absolute;
     width: 0%;
-    height: 2px;
+    height: 3px;
     left: -15%;
-    bottom: 0;
+    bottom: -4px;
     background: linear-gradient(90deg, #7b5cf0, #9a7fff, #b8c0ff);
     transition: width 0.3s ease-in-out;
 }
@@ -98,110 +89,15 @@
     overflow: hidden;
     width: 75px;
     height: 35px;
-    color: rgb(99, 61, 160);
-    background-color: white;
+    color: #fff;
+    background: linear-gradient(90deg, #7b5cf0, #9a7fff, #b8c0ff);
     border-radius: 10px;
-    border: 2px solid rgb(99, 61, 160);
+    border: none;
     font-weight: bold;
     font-family: 'Times New Roman', Times, serif;
-    font-size: 16px;
+    font-size: 18px;
     cursor: pointer;
     z-index: 1;
-}
-
-.nav_buttons.dark button{
-    background-color: lightsalmon;
-    color: black;
-}
-
-.nav_buttons button::before {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: -100%; /* Start completely hidden on the left */
-    width: 100%;
-    height: 100%;
-    background-color: darkred;
-    transition: left 0.4s ease-in-out;
-    z-index: -1; /* Put behind text */
-}
-
-.nav_buttons button:hover::before {
-    left: 0;
-}
-
-.nav_buttons.dark button::before {
-    background-color: beige;
-}
-
-.switch {
-    position: relative;
-    display: inline-block;
-    width: 40px;
-    height: 20px;
-    margin-left: 1rem;
-}
-  
-.switch input {
-    opacity: 0;
-    width: 0;
-    height: 0;
-}
-
-.switch::before {
-    content: 'Light';
-    color: black;
-    left: -45px;
-    position: absolute;
-
-}
-
-.switch.dark::before {
-    color: white;
-
-}
-
-.switch::after {
-    content: 'Dark';
-    color: black;
-    right: -40px;
-    position: absolute;
-    
-}
-
-.switch.dark::after {
-    color: white;
-
-}
-  
-.slider {
-    position: absolute;
-    cursor: pointer;
-    inset: 0;
-    background-color: black;
-    border-radius: 34px;
-    transition: .4s;
-}
-  
-.slider:before {
-    position: absolute;
-    content: "";
-    height: 14px;
-    width: 14px;
-    left: 3px;
-    bottom: 3px;
-    background-color: white;
-    border-radius: 50%;
-    transition: .4s;
-}
-  
-input:checked + .slider {
-    background-color: white;
-}
-  
-input:checked + .slider:before {
-    transform: translateX(20px);
-    background-color: black;
 }
 
 @media (max-width: 767px) {
@@ -216,16 +112,18 @@ input:checked + .slider:before {
     .logo {
         width: 100px;
         padding-left: 20px;
+        font-size: 20px;
     }    
     
     .hamburger {
         display: block;
         margin-right: 20px;
-        font-size: 20px;
+        font-size: 16px;
         font-weight: bold;
         border: solid 2px;
         border-radius: 5px;
         padding: 3px;
+        color: #fff;
     }
 
     .links {
@@ -242,32 +140,8 @@ input:checked + .slider:before {
         box-sizing: border-box;
     }
 
-    .links.dark {
-        background-color: darkred;
-        border-top: 1px solid white;
-    }
-
     .links.menu_open, .button_mobile {
         display: flex;
-    }
-
-    .button_mobile {
-        justify-content: center;
-        align-items: center;
-        width: 150px;
-        height: 30px;
-        background-color: orangered;
-        color: white;
-        border-radius: 10px;
-        border: none;
-        font-weight: bold;
-        font-family: 'Times New Roman', Times, serif;
-        font-size: 16px;
-    }
-
-    .button_mobile.dark {
-        background-color: lightsalmon;
-        color: black;
     }
 
     .links {
