--- a/src/styles/Navbar.module.css
+++ b/src/styles/Navbar.module.css
@@ -2,13 +2,13 @@
     display: flex;
     justify-content: space-around;
     align-items: center;
-    padding: 10px;
+    padding: 25px 10px;
     box-sizing: border-box;
-    height: 80px;
+    height: 100px;
     width: 100%;
     position: fixed;
     top: 0;
-    margin-top: 15px;
+    background-color: #15152c;
 }
 
 .logo {
@@ -42,6 +42,7 @@
     border-radius: 30px;
     max-height: 50px;
     padding-inline-start: 0;
+    
 }
 
 .links li {
