--- a/src/styles/Contact.module.css
+++ b/src/styles/Contact.module.css
@@ -1,4 +1,82 @@
-.title h1 {
-    padding-top: 150px;
+.contact {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.contact h1 {
+    font-family: "Exo 2", sans-serif;
+    font-optical-sizing: auto;
+    font-style: italic;
     font-size: 50px;
+    background: linear-gradient(90deg, #7b5cf0, #9a7fff, #b8c0ff);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    background-clip: text;
+    color: transparent;
+    margin: 0;
+}
+
+.contact h4 {
+    font-family: "Exo 2", sans-serif;
+    font-optical-sizing: auto;
+    font-size: 20px;
+    margin-top: 0;
+}
+
+.form {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
+
+.form_fields {
+    display: flex;
+    flex-direction: column;
+}
+
+.label {
+    font-family: "Exo 2", sans-serif;
+    font-optical-sizing: auto;
+    font-size: 18px;
+    margin-bottom: 5px;
+}
+
+.form_fields input, .form_fields textarea {
+    margin-bottom: 20px;
+    width: 30vw;
+}
+
+.form_fields input {
+    height: 30px;
+    border-radius: 50px;
+    border: none;
+    padding-left: 20px;
+}
+
+.form_fields textarea {
+    height: 100px;
+    border-radius: 10px;
+    border: none;
+    padding-top: 5px;
+    padding-left: 10px;
+    resize: none;
+}
+
+.send {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 20vw;
+    height: 40px;
+    font-family: "Exo 2", sans-serif;
+    font-optical-sizing: auto;
+    font-size: 18px;
+    font-weight: bold;
+    font-style: italic;
+    color: #fff;
+    background: linear-gradient(90deg, #7b5cf0, #9a7fff, #b8c0ff);
+    border: none;
+    border-radius: 50px;
 }
