--- a/src/styles/Navbar.module.css
+++ b/src/styles/Navbar.module.css
@@ -8,7 +8,10 @@
     width: 100%;
     position: fixed;
     top: 0;
-    background-color: #15152c;
+    background-color: rgba(21, 21, 44, 0.7);
+    backdrop-filter: blur(10px); /* adds the blur effect */
+    -webkit-backdrop-filter: blur(10px); /* for Safari support */
+    z-index: 1000; /* ensures it stays above content */
 }
 
 .logo {
