[UPDATE] Make navbar and home responsive for mobile

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,13 +1,18 @@
+*, *::before, *::after {
+    box-sizing: border-box;
+}
+
 html, body {
     margin: 0;
     padding: 0;
+    width: 100%;
+    max-width: 100vw;
+    overflow-x: hidden;
 }
 
 body {
     height: 100vh;
-    width: 100%;
     box-sizing: border-box;
-    overflow-x: hidden;
     background-color: #15152c;
     color: #fff;
 }
