--- a/frontend/src/styles/Home.module.css
+++ b/frontend/src/styles/Home.module.css
@@ -49,12 +49,35 @@
 }
 
 @media (max-width: 767px) {
-    .big_title {
-        font-size: 40px;
+    .home {
+        margin-top: 80px;
+        display: grid;
+        align-content: center;
+        padding: 0;
     }
 
-    .page_button {
-        width: 100px;
-        font-size: 12px;
+    .headline {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        width: 100%;
+    }
+
+    .entry_line {
+        font-size: 20px !important;
+    }
+
+    .title {
+        font-size: 34px;
+    }
+
+    .description {
+        font-size: 16px;
+        text-align: center;
+    }
+
+    .photo {
+        width: 100%;
+
     }
 }
