--- a/frontend/src/styles/About.module.css
+++ b/frontend/src/styles/About.module.css
@@ -37,3 +37,23 @@
     font-optical-sizing: auto;
     font-style: italic;
 }
+
+@media (max-width: 767px) {
+    .about_section {
+        padding: 100px 20px 32px 20px;
+    }
+    
+    .about {
+        display: grid;
+        grid-template-columns: 1fr;
+    }
+
+    .picture img{
+        width: 100%;
+        height: 100%;
+    }
+
+    .about_description {
+        text-align: center;
+    }
+}
