--- a/frontend/src/styles/Projects.module.css
+++ b/frontend/src/styles/Projects.module.css
@@ -77,3 +77,20 @@
 .odd {
     flex-direction: row-reverse;
 }
+
+@media (max-width: 767px) {
+    .projects {
+        display: grid;
+    }
+
+    .proj_card {
+        max-width: 100%;
+        display: flex;
+        flex-direction: column;
+        padding: 0px 20px 20px 20px;
+    }
+
+    .proj_img {
+        width: 100%;
+    }
+}
