[UPDATE] Change margin-top to padding-top on home, make technologies and contact sections responsive for mobile

--- a/frontend/src/styles/Contact.module.css
+++ b/frontend/src/styles/Contact.module.css
@@ -81,3 +81,17 @@
     border: none;
     border-radius: 50px;
 }
+
+@media (max-width: 767px) {
+    .form_fields input, .form_fields textarea {
+        width: 70vw;
+    }
+
+    .send {
+        width: 70vw;
+    }
+
+    .contact h4 {
+        text-align: center;
+    }
+}
