--- a/frontend/src/styles/Home.module.css
+++ b/frontend/src/styles/Home.module.css
@@ -50,7 +50,7 @@
 
 @media (max-width: 767px) {
     .home {
-        margin-top: 80px;
+        padding-top: 100px !important;
         display: grid;
         align-content: center;
         padding: 0;
@@ -68,7 +68,7 @@
     }
 
     .title {
-        font-size: 34px;
+        font-size: 32px;
     }
 
     .description {
