--- a/frontend/src/styles/Technologies.module.css
+++ b/frontend/src/styles/Technologies.module.css
@@ -57,3 +57,21 @@
     font-family: "Exo 2", sans-serif;
     font-optical-sizing: auto;
 }
+
+@media (max-width:767px) {
+    .title h4 {
+        text-align: center;
+    }
+
+    .cards {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+    }
+
+    .tech_card {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+    }
+}
