--- a/frontend/src/styles/Navbar.module.css
+++ b/frontend/src/styles/Navbar.module.css
@@ -3,11 +3,13 @@
     justify-content: space-around;
     align-items: center;
     padding: 25px 10px;
+    margin-right: 15px;
     box-sizing: border-box;
     height: 100px;
-    width: 100%;
     position: fixed;
     top: 0;
+    right: 0;
+    left: 0;
     background-color: rgba(21, 21, 44, 0.7);
     backdrop-filter: blur(10px); /* adds the blur effect */
     -webkit-backdrop-filter: blur(10px); /* for Safari support */
@@ -117,7 +119,8 @@
     .navbar {
         justify-content: space-between; /* logo left, hamburger right */
         padding: 0px 30px;
-        height: 90px;     
+        height: 90px;
+        margin: 0;  
     }
 
     .hamburger {
